<resources>
    <string name="app_name">EComm_MobileApp</string>
    <string name="create_a_new_account">New user? Click here to create a new account</string>
    <string name="amaz_n">Amaz\'n</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_a_new_username_here">Enter a new username here</string>
    <string name="enter_a_new_password_here">Enter a new password here</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sharedpreference_file_key">cTangPrefFileName</string>
    <string name="preference_userId_key">ShopPreferenceUserIdKeyUser</string>
    <string name="welcome_to_amaz_n">Welcome to Amaz\'n!</string>
    <string name="please_re_enter_your_password">Please re-enter your password</string>
    <string name="card_first_name">First Name</string>
    <string name="payment_method">Payment Method</string>
    <string name="card_last_name">Last Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="payment_first_name">First Name:</string>
    <string name="payment_last_name">Last Name:</string>
    <string name="payment_card_number">Card Number:</string>
    <string name="select_card">Select Card</string>
    <string name="checkout">Checkout</string>
    <string name="back_to_shop">Back to Shop</string>
    <string name="payment_header">Payment</string>
</resources>