<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <ActionMenuView
        android:id="@+id/payment_header"
        android:background="@color/color_primary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:outlineAmbientShadowColor="@color/color_primary"
        android:paddingStart="3dp"
        android:paddingEnd="3dp">
        <TextView
            android:id="@+id/payment_header_title"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:textColor="@color/color_white"
            android:text="@string/payment_header"
            android:textSize="30sp"
            android:textAlignment="textStart"
            />
        <TextView
            android:id="@+id/textViewUserName"
            android:textColor="@color/color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:text="TextView" />
        <Button
            android:id="@+id/payment_header_logout_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/color_tertiary"
            android:textColor="@color/color_primary"
            android:text="Logout"
            android:textSize="20sp"
            />
    </ActionMenuView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/payment_recyclerview_items"
        tools:listitem="@layout/payment_recyclerview_items"
        app:layout_constraintTop_toBottomOf="@id/payment_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/payment_footer_buttons" />
    <LinearLayout
        android:id="@+id/payment_footer_buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:gravity="center">

        <Button
            android:id="@+id/payment_button_back_to_main"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:backgroundTint="@color/color_tertiary"
            android:shadowColor="@color/color_primary"
            android:text="@string/back_to_shop"
            android:textColor="@color/color_primary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/payment_button_to_add_payment_method"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:backgroundTint="@color/color_tertiary"
            android:shadowColor="@color/color_primary"
            android:text="@string/add_payment_method"
            android:textColor="@color/color_primary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/payment_button_to_checkout"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:backgroundTint="@color/color_tertiary"
            android:shadowColor="@color/color_primary"
            android:text="@string/checkout"
            android:textColor="@color/color_primary"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>