<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentMethodActivity">

    <ActionMenuView
        android:id="@+id/paymentMethod_header"
        android:background="@color/color_primary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:outlineAmbientShadowColor="@color/color_primary"
        android:paddingStart="3dp"
        android:paddingEnd="3dp">
        <TextView
            android:id="@+id/payment_header_title"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:textColor="@color/color_white"
            android:text="Payment Method"
            android:textSize="30sp"
            android:textAlignment="textStart"
            />
        <Button
            android:id="@+id/payment_header_logout_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/color_tertiary"
            android:textColor="@color/color_primary"
            android:text="Logout"
            android:textSize="20sp"
            /> <!--this is a comment-->
    </ActionMenuView>

    <EditText
        android:id="@+id/editTextCardFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="16dp"
        android:ems="13"
        android:hint="@string/card_first_name"
        android:inputType="text"
        android:padding="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCardLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="13"
        android:hint="@string/card_last_name"
        android:inputType="text"
        android:padding="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCardFirstName" />

    <EditText
        android:id="@+id/editTextCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="13"
        android:hint="@string/card_number"
        android:inputType="number"
        android:padding="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCardLastName" />

    <EditText
        android:id="@+id/editTextCVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="13"
        android:hint="@string/cvv"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCardNumber" />

    <Button
        android:id="@+id/buttonAddPaymentMethod"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_payment_method"
        android:textSize="15sp"
        android:backgroundTint="@color/color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCVV" />

    <LinearLayout
        android:id="@+id/payment_footer_buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:gravity="center">
        <Button
            android:id="@+id/payment_button_back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Back to Shop"
            android:textSize="15dp"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/color_tertiary"
            android:textColor="@color/color_primary"
            android:shadowColor="@color/color_primary"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>